tests/hole_enum_name_bad.stderr
tests/hole_enum_name_bad.sl:2:6: error: SL2007: identifier '_' is reserved
