tests/hole_enum_name_bad.sl
// Verifies hole enum name is rejected.
enum _ int {
    A
}
